--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -21,6 +21,11 @@
      for different hardware and product builds. -->
 <resources>
 
+    <!-- Car Mode -->
+    <integer name="config_defaultUiModeType">3</integer>
+    <!-- Can't leave car mode -->
+    <bool name="config_lockUiMode">true</bool>
+
     <!-- This device is not "voice capable"; it's data-only. -->
     <bool name="config_voice_capable">false</bool>
 
